Integrated promises + moved logic into ScheduleService
Added some async await stuff too
